--- a/index.html
+++ b/index.html
@@ -41,42 +41,32 @@
       <div class="jumbotron">
         <h1>Want a burrito?</h1>
         <p class="lead">Tufts has a new food delivery service, powered entirely by students.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-success" href="#signup" role="button">Sign up today</a></p>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Who?</h4>
+          <p>We are a group of students who signed up to do rotating pickup from Chipotle and other food places.</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4>How?</h4>
+          <p>There is a calendar that displays order times, and we try and figure out who is available at those times.</p>
         </div>
 
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Why?</h4>
+          <p>We recognize that most places don't deliver at absurd hours. We want you to enjoy your fish tacos at 2am without interrupting your studying.</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4>How much?</h4>
+          <p>We charge the cost of the order + 10% to deliver. An extra fee (undecided) applies for "rush" deliveries or times where nobody is available.</p>
         </div>
       </div>
 
       <div class="footer">
-        <p>&copy; Company 2014</p>
+        <p>&copy; TuftsOrder 2014</p>
       </div>
 
     </div> <!-- /container -->
 
-
-    <!-- Bootstrap core JavaScript
-	 ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
   </body>
 </html>
