added an order button w/ google form

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="jumbotron">
         <h1>Want a burrito?</h1>
         <p class="lead">Tufts has a new food delivery service, powered entirely by students.</p>
-        <p><a class="btn btn-lg btn-success" href="#signup" role="button">Sign up today</a></p>
+        <p><a id="ordernow" class="btn btn-lg btn-success" href="#order" role="button">Order now</a></p>
       </div>
 
       <div class="row marketing">
@@ -67,6 +67,9 @@
       </div>
 
     </div> <!-- /container -->
+
+    <script type="text/javascript" src="/assets/js/jquery.js"></script>
+    <script type="text/javascript" src="/assets/js/routing.js"></script>
 
   </body>
 </html>
